Set text-size-adjust to auto
This is to check whether the page renders differently, compared to when the value is 100%.

--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,9 @@
 }
 
 body {
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: auto;
+  -webkit-text-size-adjust: auto;
+  -moz-text-size-adjust: auto;
   color: #333;
   /* overflow: hidden; */
   font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans,
