--- a/styles.css
+++ b/styles.css
@@ -563,6 +563,10 @@ a[href]:focus {
   outline-offset: 0.16rem;
 }
 
+figure {
+  margin: 1rem;
+}
+
 details > summary > h2,
 details > summary > h3,
 details > summary > h4,
